Adicionado uma pagina exemplo

--- a/main.html
+++ b/main.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Mon Père</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="home">
+        <h2>Bem-vindo à Mon Père</h2>
+        <p>Encontre peças únicas e cheias de estilo!</p>
+    </section>
+    <section id="produtos">
+        <h2>Nossos Produtos</h2>
+        <div class="product">
+            <img src="produto1.jpg" alt="Produto 1">
+            <h3>Produto 1</h3>
+            <p>Descrição do Produto 1</p>
+        </div>
+        <div class="product">
+            <img src="produto2.jpg" alt="Produto 2">
+            <h3>Produto 2</h3>
+            <p>Descrição do Produto 2</p>
+        </div>
+    </section>
+    <section id="sobre">
+        <h2>Sobre Nós</h2>
+        <p>Somos uma loja especializada em roupas vintage, trazendo o melhor da moda retrô para você.</p>
+    </section>
+    <section id="contato">
+        <h2>Entre em Contato</h2>
+        <p>Estamos sempre disponíveis para tirar suas dúvidas e receber seu feedback.</p>
+    </section>
+    <footer>
+        <p>&copy; 2023 Loja Vintage. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
