--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="title">
         <div class="title-background"></div>
-        <h1 class="head">Scroll it</h1>
+        <h1 class="head">Mon Père | Porto</h1>
     </div>
 
     <div class="circle">
@@ -39,8 +39,25 @@
     </svg>
 
     <div class="bottom">
-        
+        <div class="map-container">
+            <div class="map-wrapper">
+                <iframe
+                    width="1000"
+                    height="400"
+                    style="border: 0;"
+                    loading="lazy"
+                    allowfullscreen
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3004.2752936474717!2d-8.6142717!3d41.150343899999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2464fd3c45a943%3A0x2d6c0df9a47b0d32!2sMon%20P%C3%A8re%20Vintage!5e0!3m2!1sen!2spt!4v1716977956468!5m2!1sen!2spt">
+                </iframe>
+            </div>
+        </div>
     </div>
+    
+
+    <div class="license-info">
+        <p>Website exclusivo de Mon Père | Porto. Todos os direitos reservados. &copy; 2024</p>
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
