Adicionado pagina de detalhes do produto com o seu proprio ficehiro css

--- a/produtos.html
+++ b/produtos.html
@@ -22,15 +22,15 @@
               </div>
               <div class="product-image">
                 <span class="hover-link"></span>
-                <a href="#" class="product-link">Ver Detalhes</a>
-                <img class="img-responsive" src="http://demandware.edgesuite.net/sits_pod26/dw/image/v2/AAFX_PRD/on/demandware.static/-/Sites-master-catalog/default/dwc76ebcfb/101044/101044403_1.jpg?sw=250&sh=325" alt="">
+                <a href="detalhesproduto.html" class="product-link">Ver Detalhes</a>
+                <img class="img-responsive" src="" alt="">
               </div>
 
               <div class="product-description">
                 <div class="product-label">
                   <div class="product-name">
                     <h1> nome </h1>
-                    <p class="price">preço</p>
+                    <p class="price">€</p>
                     <p>Pequena descrição</p>
                   </div>
                 </div>
