--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav>
+        <a href="#!">Home</a>
+        <a href="produtos.html">Produtos</a>
+        <a href="#!">Contact</a>
+    </nav>
 
-
-
-    <div class="wrapper">
-        <div class="content">
-            <section class="section hero"></section>
-            <section class="section gradient-purple"></section>
-            <section class="section gradient-blue"></section>
+    <div class="header-circle">
+        <div class="outer-circle-large">
+            <div class="outer-circle-large-inner"></div>
         </div>
     </div>
 
@@ -39,19 +40,15 @@
 
     <div class="bottom">
         <div class="map-container">
-            <div class="map-wrapper">
-                <iframe
-                    width="1000"
-                    height="400"
-                    style="border: 0;"
-                    loading="lazy"
-                    allowfullscreen
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3004.2752936474717!2d-8.6142717!3d41.150343899999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2464fd3c45a943%3A0x2d6c0df9a47b0d32!2sMon%20P%C3%A8re%20Vintage!5e0!3m2!1sen!2spt!4v1716977956468!5m2!1sen!2spt">
-                </iframe>
-            </div>
+            <iframe
+                width="1000"
+                height="400"
+                style="border: 0;"
+                loading="lazy"
+                allowfullscreen
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3004.2752936474717!2d-8.6142717!3d41.150343899999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2464fd3c45a943%3A0x2d6c0df9a47b0d32!2sMon%20P%C3%A8re%20Vintage!5e0!3m2!1sen!2spt!4v1716977956468!5m2!1sen!2spt">
+            </iframe>
         </div>
-    </div>
-    
 
     <div class="license-info">
         <p>Website exclusivo de Mon Père | Porto. Todos os direitos reservados. &copy; 2024</p>
