--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="#!">Home</a>
+        <a href="#!">Pagina</a>
         <a href="produtos.html">Produtos</a>
         <a href="#!">Contact</a>
     </nav>
