testes nos produtos

--- a/produtos.html
+++ b/produtos.html
@@ -23,7 +23,7 @@
               <div class="product-image">
                 <span class="hover-link"></span>
                 <a href="detalhesproduto.html" class="product-link">Ver Detalhes</a>
-                <img class="img-responsive" src="" alt="">
+                <img class="img-responsive" src="img/produtoex.png" alt="">
               </div>
 
               <div class="product-description">
