--- a/produtos.html
+++ b/produtos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Os Nossos Produtos</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stylelistaprodutos.css">
 </head>
 <body>
 
@@ -23,7 +23,7 @@
               <div class="product-image">
                 <span class="hover-link"></span>
                 <a href="detalhesproduto.html" class="product-link">Ver Detalhes</a>
-                <img class="img-responsive" src="img/produtoex.png" alt="">
+                <img class="img-responsive" src="" alt="">
               </div>
 
               <div class="product-description">
