--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon Pere Vintage</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <nav>
         <a href="#!">Pagina</a>
         <a href="produtos.html">Produtos</a>
-        <a href="#!">Contact</a>
+        <a href="detalhesproduto.html">Contact</a>
     </nav>
 
     <div class="header-circle">
@@ -50,6 +51,20 @@
             </iframe>
         </div>
 
+        <div class="contact-info">
+            <div class="social-media">
+                <a href="https://www.facebook.com/monperevintage"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.instagram.com/monperevintage"><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.threads.net/@monperevintage"><i class='bx bxl-twitter'></i></a>
+            </div>
+            <div class="address">
+                <p>Mon Père Vintage</p>
+                <p>918 480 270</p>
+                <p>Rua da Conceição nº 80</p>
+                <p>4050-213 Porto, Portugal</p>
+            </div>
+        </div>
+        
     <div class="license-info">
         <p>Website exclusivo de Mon Père | Porto. Todos os direitos reservados. &copy; 2024</p>
     </div>
