--- a/index.html
+++ b/index.html
@@ -39,6 +39,52 @@
         <path stroke="white" stroke-width="0.5" fill="none" d="M 1 1 H 200 L 100 140 L 1 1" />
     </svg>
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="products-section">
+        <div class="product-container">
+            <div class="product-item">
+                <a href="#" class="product-visual">
+                    <picture>
+                        <source srcset="https://raw.githubusercontent.com/mobalti/open-props-interfaces/main/product-details/images/img-1.avif" type="image/avif" />
+                        <img src="https://raw.githubusercontent.com/mobalti/open-props-interfaces/main/product-details/images/img-1.webp" alt="Cheetah Hoodie" />
+                    </picture>
+                </a>
+                <div class="product-info">
+                    <h3>CHEETAH GLAM HOODIE</h3>
+                    <div class="price">$80.00</div>
+                    <button class="button primary" type="submit">Pre-Order</button>
+                    <small>SHIPS ON JANUARY 5, 2024</small>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="product-container">
+            <div class="product-item">
+                <a href="#" class="product-visual">
+                    <picture>
+                        <source srcset="https://raw.githubusercontent.com/mobalti/open-props-interfaces/main/product-details/images/img-2.avif" type="image/avif" />
+                        <img src="https://raw.githubusercontent.com/mobalti/open-props-interfaces/main/product-details/images/img-2.webp" alt="Cheetah Hoodie" />
+                    </picture>
+                </a>
+                <div class="product-info">
+                    <h3>CHEETAH GLAM HOODIE 2</h3>
+                    <div class="price">$90.00</div>
+                    <button class="button primary" type="submit">Pre-Order</button>
+                    <small>SHIPS ON JANUARY 5, 2024</small>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="bottom">
         <div class="map-container">
             <iframe
