Adiconado página de contacto simples

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <a href="#!">Pagina</a>
-        <a href="produtos.html">Produtos</a>
-        <a href="detalhesproduto.html">Contact</a>
+        <a href="listaprodutos.html">Produtos</a>
+        <a href="contacto.html">Contact</a>
     </nav>
 
     <div class="header-circle">
