--- a/listaprodutos.html
+++ b/listaprodutos.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styledetalhesprodutos.css">
+    <link rel="stylesheet" href="css/stylelistaprodutos.css">
 </head>
 <body>
-    <div class="body">
-        <div class="product_img">
-          <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Freel%2F684121357229209%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
-        </div>
-        <div class="product_info">
-          <div class="seller_info">
-            
-          </div>
-          <div class="product_title"> Nome Produto</div>
-          <div class="product_model">Ref:.....
-        </div>
-          <div class="product_price">preço
-        </div>
-          <div class="product_descr">descrição</div>
-          <div class="product_color">cor</div>
-          <div class="product_color">email</div>
-          <div class="product_color">telefone</div>
-          <div class="product_quantity">Quantidade:<br> 
-            <input type="number">
-          </div>
-          <div class="add_to_cart">Adicionar ao Carrinho</div>
-        </div>
-        </div>
+  <div class="produto">
+    <img src="img/img-1.webp" alt="Produto 1">
+    <h3>CHEETAH GLAM HOODIE</h3>
+    <p>Preço: 79,99€</p>
+    <a href="detalhesproduto.html" class="btn">Detalhes</a>
+</div>
+
+<div class="produto">
+  <img src="imagem1.jpg" alt="Produto 2">
+  <h3>Produto 2</h3>
+  <p>Preço: 50,00€</p>
+  <a href="" class="btn">Detalhes</a>
+</div>
+
+<div class="produto">
+  <img src="imagem1.jpg" alt="Produto 3">
+  <h3>Produto 3</h3>
+  <p>Preço: 50,00€</p>
+  <a href="" class="btn">Detalhes</a>
+</div>
+
+<div class="produto">
+  <img src="imagem1.jpg" alt="Produto 4">
+  <h3>Produto 4</h3>
+  <p>Preço: 50,00€</p>
+  <a href="" class="btn">Detalhes</a>
+</div>
     
 </body>
 </html>
