--- a/detalhesproduto.html
+++ b/detalhesproduto.html
@@ -14,7 +14,7 @@
                 <div class="col-6">
                     <div class="img-produto">
                         <div class="img-produto-principal">
-                            <img src="img/tshirt-1.png" alt="" id="img-produto-principal">
+                            <img src="img/img-1.webp" alt="" id="img-produto-principal">
                         </div>
 
                         <div class="img-produto-slider">
