--- a/detalhesproduto.html
+++ b/detalhesproduto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes</title>
     <link rel="stylesheet" href="css/styledetalhesproduto.css">
+    <link rel="stylesheet" href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
 </head>
 <body>
   <body>
@@ -21,7 +22,7 @@
                             <img src="" alt=""  class="image-list">
                             <img src="" alt=""  class="image-list">
                             <img src="" alt=""  class="image-list">
-                            <img src=" alt=""  class="image-list">
+                            <img src="" alt=""  class="image-list">
                         </div>
                     </div>
                 </div>
