--- a/contacto.html
+++ b/contacto.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fale Connosco</title>
+    <title>Fale Connosco | Mon Pere Vintage</title>
     <link rel="stylesheet" href="css/stylecontacto.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <form class="form">
-        <div class="titulo">Fale Connosco</div>
-        <input type="text" placeholder="Email" class="input">
-        <textarea placeholder="A sua mensagem"></textarea>
-         
-        <button>Enviar</button>
-    </form>
+    <nav class="navbar">
+        <div class="navbar-title">Mon Pere | Porto</div>
+        <div class="navbar-links">
+            <a href="index.html">Pagina</a>
+            <a href="listaprodutos.html">Produtos</a>
+            <a href="contacto.html">Contact</a>
+        </div>
+    </nav>
+
+    <div class="contact-container">
+        <form class="form">
+            <div class="titulo">Fale Connosco</div>
+            <input type="text" placeholder="Email" class="input">
+            <textarea placeholder="A sua mensagem"></textarea>
+            <button>Enviar</button>
+        </form>
+    </div>
+
 </body>
 </html>
