--- a/contacto.html
+++ b/contacto.html
@@ -14,15 +14,17 @@
             <a href="index.html">Pagina</a>
             <a href="listaprodutos.html">Produtos</a>
             <a href="contacto.html">Contact</a>
+            <a href="cart.html">Carrinho</a>
         </div>
     </nav>
 
     <div class="contact-container">
         <form class="form">
             <div class="titulo">Fale Connosco</div>
-            <input type="text" placeholder="Email" class="input">
+            <input type="text" placeholder="Assunto" class="input">
+            <input type="text" placeholder="Seu Email" class="input">
             <textarea placeholder="A sua mensagem"></textarea>
-            <button>Enviar</button>
+            <button>Enviar 😄</button>
         </form>
     </div>
 
