--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="#!">Pagina</a>
         <a href="listaprodutos.html">Produtos</a>
         <a href="contacto.html">Contact</a>
+        <a href="cart.html">Carrinho</a>
     </nav>
 
     <div class="header-circle">
