--- a/listaprodutos.html
+++ b/listaprodutos.html
@@ -1,39 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Produtos | Mon Pere Vintage</title>
     <link rel="stylesheet" href="css/stylelistaprodutos.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-  <div class="produto">
-    <img src="img/img-1.webp" alt="Produto 1">
-    <h3>CHEETAH GLAM HOODIE</h3>
-    <p>Preço: 79,99€</p>
-    <a href="detalhesproduto.html" class="btn">Detalhes</a>
-</div>
+    <nav class="navbar">
+        <div class="navbar-title">Mon Pere | Porto</div>
+        <div class="navbar-links">
+            <a href="index.html">Pagina</a>
+            <a href="listaprodutos.html">Produtos</a>
+            <a href="contacto.html">Contact</a>
+            <a href="cart.html">Carrinho</a>
+        </div>
+    </nav>
 
-<div class="produto">
-  <img src="imagem1.jpg" alt="Produto 2">
-  <h3>Produto 2</h3>
-  <p>Preço: 50,00€</p>
-  <a href="" class="btn">Detalhes</a>
-</div>
+    <div class="search-bar-container">
+        <input type="text" class="search-bar" placeholder="Pesquisar produtos...">
+        <button class="search-button"><i class='bx bx-search'></i></button>
+    </div>
 
-<div class="produto">
-  <img src="imagem1.jpg" alt="Produto 3">
-  <h3>Produto 3</h3>
-  <p>Preço: 50,00€</p>
-  <a href="" class="btn">Detalhes</a>
-</div>
+    <div class="product-list">
+        <div class="produto">
+            <img src="img/img-1.webp" alt="Produto 1">
+            <h3>CHEETAH GLAM HOODIE</h3>
+            <p>Preço: 79,99€</p>
+            <a href="detalhesproduto.html" class="btn">Detalhes</a>
+        </div>
 
-<div class="produto">
-  <img src="imagem1.jpg" alt="Produto 4">
-  <h3>Produto 4</h3>
-  <p>Preço: 50,00€</p>
-  <a href="" class="btn">Detalhes</a>
-</div>
-    
+        <div class="produto">
+            <img src="img/img-1.webp" alt="Produto 2">
+            <h3>Produto 2</h3>
+            <p>Preço: 50,00€</p>
+            <a href="" class="btn">Detalhes</a>
+        </div>
+
+        <div class="produto">
+            <img src="img/img-1.webp" alt="Produto 3">
+            <h3>Produto 3</h3>
+            <p>Preço: 50,00€</p>
+            <a href="" class="btn">Detalhes</a>
+        </div>
+
+        <div class="produto">
+            <img src="img/img-1.webp" alt="Produto 4">
+            <h3>Produto 4</h3>
+            <p>Preço: 50,00€</p>
+            <a href="" class="btn">Detalhes</a>
+        </div>
+
+        <div class="produto">
+          <img src="img/img-1.webp" alt="Produto 4">
+          <h3>Produto 4</h3>
+          <p>Preço: 50,00€</p>
+          <a href="" class="btn">Detalhes</a>
+        </div>
+
+      <div class="produto">
+        <img src="img/img-1.webp" alt="Produto 4">
+        <h3>Produto 4</h3>
+        <p>Preço: 50,00€</p>
+        <a href="" class="btn">Detalhes</a>
+      </div>
+
+    </div>
+
 </body>
 </html>
