--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Carrinho | Mon Pere Vintage</title>
     <link rel="stylesheet" href="css/cart.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <nav class="navbar">
@@ -13,7 +14,7 @@
             <a href="index.html">Página</a>
             <a href="listaprodutos.html">Produtos</a>
             <a href="contacto.html">Contacto</a>
-            <a href="cart.html">Carrinho</a>
+            <a href="cart.html"><i class='bx bx-cart'></i></a>
         </div>
     </nav>
 
