--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <nav>
-        <a href="#!">Pagina</a>
+        <a href="#">Pagina</a>
         <a href="listaprodutos.html">Produtos</a>
-        <a href="contacto.html">Contact</a>
-        <a href="cart.html">Carrinho</a>
+        <a href="contacto.html">Contacto</a>
+        <a href="cart.html"><i class='bx bx-cart'></i></a>
     </nav>
 
     <div class="header-circle">
