--- a/listaprodutos.html
+++ b/listaprodutos.html
@@ -13,8 +13,8 @@
         <div class="navbar-links">
             <a href="index.html">Pagina</a>
             <a href="listaprodutos.html">Produtos</a>
-            <a href="contacto.html">Contact</a>
-            <a href="cart.html">Carrinho</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="cart.html"><i class='bx bx-cart'></i></a>
         </div>
     </nav>
 
