--- a/detalhesproduto.html
+++ b/detalhesproduto.html
@@ -62,24 +62,24 @@
                     <div class="tamanhos">
                         <h4>Tamanho</h4>
                         <div class="layout-tamanhos">
-                            <input type="radio" id="tamanho-s" name="tamanho" class="tamanhos-input">
+                            <input type="radio" id="tamanho-s" name="size" value="S" class="tamanhos-input">
                             <label for="tamanho-s" class="tamanho">S</label>
-                            <input type="radio" id="tamanho-m" name="tamanho" class="tamanhos-input">
+                            <input type="radio" id="tamanho-m" name="size" value="M" class="tamanhos-input">
                             <label for="tamanho-m" class="tamanho">M</label>
-                            <input type="radio" id="tamanho-l" name="tamanho" class="tamanhos-input">
+                            <input type="radio" id="tamanho-l" name="size" value="L" class="tamanhos-input">
                             <label for="tamanho-l" class="tamanho">L</label>
-                            <input type="radio" id="tamanho-xl" name="tamanho" class="tamanhos-input">
+                            <input type="radio" id="tamanho-xl" name="size" value="XL" class="tamanhos-input">
                             <label for="tamanho-xl" class="tamanho">XL</label>
                         </div>
                     </div>
                     <div class="cor-produto">
                         <h4>Cor</h4>
                         <div class="layout-cor">
-                            <input type="radio" id="cor-preto" name="cor" class="input-cor">
+                            <input type="radio" id="cor-preto" name="color" value="Preto" class="input-cor">
                             <label for="cor-preto" class="black"></label>
-                            <input type="radio" id="cor-vermelho" name="cor" class="input-cor">
+                            <input type="radio" id="cor-vermelho" name="color" value="Vermelho" class="input-cor">
                             <label for="cor-vermelho" class="red"></label>
-                            <input type="radio" id="cor-azul" name="cor" class="input-cor">
+                            <input type="radio" id="cor-azul" name="color" value="Azul" class="input-cor">
                             <label for="cor-azul" class="blue"></label>
                         </div>
                     </div>
