--- a/checkout.html
+++ b/checkout.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout</title>
+    <title>Checkout | Mon Père</title>
     <link rel="stylesheet" href="css/checkout.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div class="container">
@@ -12,78 +13,82 @@
             <h1>Mon Père</h1>
             <h2>Pagamento</h2>
             <div class="progress">
-                <span class="completed">✔ Informação</span>
-                <span>2 Detalhes de Pagamento</span>
-                <span>3 Ecomenda Feita</span>
+                <span class="step active" id="step1">✔ Informação</span>
+                <span class="step" id="step2">2 Detalhes de Pagamento</span>
+                <span class="step" id="step3">3 Encomenda Feita</span>
             </div>
         </header>
-        <section class="checkout">
-            <div class="left-column">
+        <section class="checkout" id="checkout-section">
+            <div class="left-column" id="info-section">
                 <div class="section">
                     <h3>Morada de Entrega</h3>
                     <div class="address-box">
-                        <p><input type="text"></p>
-                        <button>Change</button>
+                        <input type="text" placeholder="Endereço de entrega">
+                        <button>Mudar</button>
                     </div>
                 </div>
                 <div class="section">
                     <h3>Contacto</h3>
                     <form>
                         <label for="email">Email *</label>
-                        <input type="email" id="email" name="email" value="" required>
+                        <input type="email" id="email" name="email" required>
                         <label for="mobile">Telefone *</label>
-                        <input type="tel" id="mobile" name="mobile" value="" required>
+                        <input type="tel" id="mobile" name="mobile" required>
                     </form>
                 </div>
+                <button class="next-button" id="to-payment">Próximo: Detalhes de Pagamento</button>
+            </div>
+            <div class="left-column hidden" id="payment-section">
                 <div class="section">
-                    <h3>Metudp de Pagamento</h3>
+                    <h3>Método de Pagamento</h3>
                     <form>
-                        <input type="radio" id="card" name="payment-method" checked>
-                        <label for="card"> Cartão Débito/Crédito</label>
+                        <div class="payment-method">
+                            <input type="radio" id="card" name="payment-method" checked>
+                            <label for="card">
+                                <i class='bx bx-credit-card'></i> Cartão Débito/Crédito
+                            </label>
+                        </div>
                         <div class="card-details">
                             <label for="card-number">Número de Cartão *</label>
                             <input type="text" id="card-number" name="card-number" placeholder="1234 1234 1234 1234" required>
-                            <div class="card-info">
-                                <div>
-                                    <label for="valid-date">Data Validade *</label>
-                                    <input type="text" id="valid-date" name="valid-date" placeholder="MM / YYYY" required>
-                                </div>
-                                <div>
-                                    <label for="cvv">CVV *</label>
-                                    <input type="text" id="cvv" name="cvv" required>
-                                </div>
-                            </div>
-                            <button type="submit">Pagar</button>
+                            <label for="valid-date">Data Validade *</label>
+                            <input type="text" id="valid-date" name="valid-date" placeholder="MM / YYYY" required>
+                            <label for="cvv">CVV *</label>
+                            <input type="text" id="cvv" name="cvv" required>
                         </div>
-                        <input type="radio" id="net-banking" name="payment-method">
-                        <label for="net-banking">MB Way</label>
-                        <input type="text" id="net-banking" name="Numero Telefone"  placeholder="Número Telefone" required>
-                        
+                        <div class="payment-method">
+                            <input type="radio" id="mb-way" name="payment-method">
+                            <label for="mb-way">
+                                <i class='bx bx-mobile-alt'></i> MB Way
+                            </label>
+                        </div>
+                        <div class="mb-way-details">
+                            <label for="mb-way-number">Número de Telefone *</label>
+                            <input type="text" id="mb-way-number" name="mb-way-number" placeholder="Número de Telefone" required>
+                        </div>
+                        <button type="submit" class="next-button" id="to-review">Próximo: Revisar e Enviar</button>
                     </form>
                 </div>
             </div>
             <div class="right-column">
                 <h3>Detalhes da Encomenda</h3>
                 <div class="order-item">
-                    <img src="img/img-1.webp" alt="">
+                    <img src="img/img-1.webp" alt="CHEETAH GLAM HOODIE">
                     <div class="item-details">
                         <p>CHEETAH GLAM HOODIE</p>
                         <p>Hoodies</p>
-                        <p>Tamanho:</p>
-                        <p>Preço:</p>
+                        <p>Tamanho: M</p>
+                        <p>Preço: 79,99€</p>
                     </div>
                 </div>
                 <div class="summary">
-                    <p>Subtotal: </p>
-                    <p>Portes:</p>
-                    <p>Total:</p>
+                    <p>Subtotal: <span>79,99€</span></p>
+                    <p>Portes: <span>5,00€</span></p>
+                    <p>Total: <span>84,99€</span></p>
                 </div>
-                <button class="make-payment">Fazer Pagamento</button>
             </div>
         </section>
     </div>
-</body>
-</html>
-
+    <script src="js/checkout.js"></script>
 </body>
 </html>
