--- a/cart.html
+++ b/cart.html
@@ -21,8 +21,8 @@
     <div class="cart-container">
         <h2>Meu Carrinho</h2>
         <div class="cart-items" id="cart-items">
-            
         </div>
+        <button class="checkout-button" id="checkout-button">Checkout</button>
     </div>
 
     <div class="toast" id="toast"></div>
