--- a/checkout.html
+++ b/checkout.html
@@ -41,14 +41,14 @@
             <div class="left-column hidden" id="payment-section">
                 <div class="section">
                     <h3>Método de Pagamento</h3>
-                    <form>
+                    <form id="payment-form">
                         <div class="payment-method">
-                            <input type="radio" id="card" name="payment-method" checked>
+                            <input type="radio" id="card" name="payment-method" value="card" checked>
                             <label for="card">
                                 <i class='bx bx-credit-card'></i> Cartão Débito/Crédito
                             </label>
                         </div>
-                        <div class="card-details">
+                        <div class="card-details" id="card-details">
                             <label for="card-number">Número de Cartão *</label>
                             <input type="text" id="card-number" name="card-number" placeholder="1234 1234 1234 1234" required>
                             <label for="valid-date">Data Validade *</label>
@@ -57,12 +57,12 @@
                             <input type="text" id="cvv" name="cvv" required>
                         </div>
                         <div class="payment-method">
-                            <input type="radio" id="mb-way" name="payment-method">
+                            <input type="radio" id="mb-way" name="payment-method" value="mbway">
                             <label for="mb-way">
                                 <i class='bx bx-mobile-alt'></i> MB Way
                             </label>
                         </div>
-                        <div class="mb-way-details">
+                        <div class="mb-way-details" id="mb-way-details">
                             <label for="mb-way-number">Número de Telefone *</label>
                             <input type="text" id="mb-way-number" name="mb-way-number" placeholder="Número de Telefone" required>
                         </div>
@@ -72,19 +72,13 @@
             </div>
             <div class="right-column">
                 <h3>Detalhes da Encomenda</h3>
-                <div class="order-item">
-                    <img src="img/img-1.webp" alt="CHEETAH GLAM HOODIE">
-                    <div class="item-details">
-                        <p>CHEETAH GLAM HOODIE</p>
-                        <p>Hoodies</p>
-                        <p>Tamanho: M</p>
-                        <p>Preço: 79,99€</p>
-                    </div>
+                <div class="order-items" id="order-items">
+                    <!-- Order items will be displayed here -->
                 </div>
                 <div class="summary">
-                    <p>Subtotal: <span>79,99€</span></p>
-                    <p>Portes: <span>5,00€</span></p>
-                    <p>Total: <span>84,99€</span></p>
+                    <p>Subtotal: <span id="subtotal">0,00€</span></p>
+                    <p>Portes: <span id="shipping">5,00€</span></p>
+                    <p>Total: <span id="total">5,00€</span></p>
                 </div>
             </div>
         </section>
