--- a/detalhesproduto.html
+++ b/detalhesproduto.html
@@ -6,7 +6,6 @@
     <title>Detalhes do Produto | Mon Pere Vintage</title>
     <link rel="stylesheet" href="css/styledetalhesproduto.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
 </head>
 <body>
     <nav class="navbar">
@@ -24,7 +23,7 @@
             <div class="breadcrumb">
                 <span><a href="index.html">Home</a></span>
                 <span><a href="listaprodutos.html">Produtos</a></span>
-                <span><a href="detalhesproduto.html">Produto</a></span>
+                <span>Produto</span>
             </div>
             <div class="fila">
                 <div class="col-6">
