--- a/checkout.html
+++ b/checkout.html
@@ -73,7 +73,7 @@
             <div class="right-column">
                 <h3>Detalhes da Encomenda</h3>
                 <div class="order-items" id="order-items">
-                    <!-- Order items will be displayed here -->
+                    <!-- Pedidos iram ser criados aqui -->
                 </div>
                 <div class="summary">
                     <p>Subtotal: <span id="subtotal">0,00€</span></p>
