--- a/checkout.html
+++ b/checkout.html
@@ -49,12 +49,9 @@
                             </label>
                         </div>
                         <div class="card-details" id="card-details">
-                            <label for="card-number">Número de Cartão *</label>
-                            <input type="text" id="card-number" name="card-number" placeholder="1234 1234 1234 1234" required>
-                            <label for="valid-date">Data Validade *</label>
-                            <input type="text" id="valid-date" name="valid-date" placeholder="MM / YYYY" required>
-                            <label for="cvv">CVV *</label>
-                            <input type="text" id="cvv" name="cvv" required>
+                            <label for="card-element">Número de Cartão *</label>
+                            <div id="card-element"></div>
+                            <div id="card-errors" role="alert"></div>
                         </div>
                         <div class="payment-method">
                             <input type="radio" id="mb-way" name="payment-method" value="mbway">
@@ -83,6 +80,7 @@
             </div>
         </section>
     </div>
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="js/checkout.js"></script>
 </body>
 </html>
