--- a/contacto.html
+++ b/contacto.html
@@ -30,5 +30,16 @@
         </form>
     </div>
 
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 Mon Pere Vintage. Todos os direitos reservados.</p>
+            <div class="social-icons">
+                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-instagram'></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
