--- a/listaprodutos.html
+++ b/listaprodutos.html
@@ -23,50 +23,62 @@
         <button class="search-button"><i class='bx bx-search'></i></button>
     </div>
 
-    <div class="product-list">
-        <div class="produto">
-            <img src="img/img-1.webp" alt="Produto 1">
-            <h3>CHEETAH GLAM HOODIE</h3>
-            <p>Preço: 79,99€</p>
-            <a href="detalhesproduto.html" class="btn">Detalhes</a>
+    <div class="contentor">
+        <div class="product-list">
+            <div class="produto">
+                <div class="img-produto">
+                    <img src="img/img-1.webp" alt="Produto 1">
+                </div>
+                <h3>CHEETAH GLAM HOODIE</h3>
+                <p>Preço: 79,99€</p>
+                <a href="detalhesproduto.html" class="btn">Detalhes</a>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <img src="img/img-1.webp" alt="Produto 2">
+                </div>
+                <h3>Produto 2</h3>
+                <p>Preço: 50,00€</p>
+                <a href="detalhesproduto.html" class="btn">Detalhes</a>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <img src="img/img-1.webp" alt="Produto 3">
+                </div>
+                <h3>Produto 3</h3>
+                <p>Preço: 50,00€</p>
+                <a href="detalhesproduto.html" class="btn">Detalhes</a>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <img src="img/img-1.webp" alt="Produto 4">
+                </div>
+                <h3>Produto 4</h3>
+                <p>Preço: 50,00€</p>
+                <a href="detalhesproduto.html" class="btn">Detalhes</a>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <img src="img/img-1.webp" alt="Produto 5">
+                </div>
+                <h3>Produto 5</h3>
+                <p>Preço: 50,00€</p>
+                <a href="detalhesproduto.html" class="btn">Detalhes</a>
+            </div>
+
+            <div class="produto">
+                <div class="img-produto">
+                    <img src="img/img-1.webp" alt="Produto 6">
+                </div>
+                <h3>Produto 6</h3>
+                <p>Preço: 50,00€</p>
+                <a href="detalhesproduto.html" class="btn">Detalhes</a>
+            </div>
         </div>
-
-        <div class="produto">
-            <img src="img/img-1.webp" alt="Produto 2">
-            <h3>Produto 2</h3>
-            <p>Preço: 50,00€</p>
-            <a href="" class="btn">Detalhes</a>
-        </div>
-
-        <div class="produto">
-            <img src="img/img-1.webp" alt="Produto 3">
-            <h3>Produto 3</h3>
-            <p>Preço: 50,00€</p>
-            <a href="" class="btn">Detalhes</a>
-        </div>
-
-        <div class="produto">
-            <img src="img/img-1.webp" alt="Produto 4">
-            <h3>Produto 4</h3>
-            <p>Preço: 50,00€</p>
-            <a href="" class="btn">Detalhes</a>
-        </div>
-
-        <div class="produto">
-          <img src="img/img-1.webp" alt="Produto 4">
-          <h3>Produto 4</h3>
-          <p>Preço: 50,00€</p>
-          <a href="" class="btn">Detalhes</a>
-        </div>
-
-      <div class="produto">
-        <img src="img/img-1.webp" alt="Produto 4">
-        <h3>Produto 4</h3>
-        <p>Preço: 50,00€</p>
-        <a href="" class="btn">Detalhes</a>
-      </div>
-
     </div>
-
 </body>
 </html>
