--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="navbar-title">Mon Pere | Porto</div>
         <div class="navbar-links">
-            <a href="index.html">Página</a>
+            <a href="index.html">Pagina</a>
             <a href="listaprodutos.html">Produtos</a>
             <a href="contacto.html">Contacto</a>
             <a href="cart.html"><i class='bx bx-cart'></i></a>
