--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_autoresponse" value="Email enviado com sucessso">
             <textarea placeholder="A sua mensagem"></textarea>
-            <button>Enviar 😄</button>
+            <button>Enviar <p>😃</p> </button>
         </form>
     </div>
 
