--- a/cart.html
+++ b/cart.html
@@ -21,6 +21,8 @@
     <div class="cart-container">
         <h2>Meu Carrinho</h2>
         <div class="cart-items" id="cart-items">
+        <div class="removeCartItem:">Remover
+        </div>
         </div>
         <button class="checkout-button" id="checkout-button">Checkout</button>
     </div>
