--- a/checkout.html
+++ b/checkout.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="mb-way-details" id="mb-way-details" style="display: none;">
                             <label for="mb-way-number">Número de Telefone *</label>
-                            <input type="tel" id="mb-way-number" name="mb-way-number" placeholder="+351 912 345 678" pattern="\+351 9[0-9]{2} [0-9]{3} [0-9]{3}" required>
+                            <input type="tel" id="mb-way-number" name="mb-way-number" placeholder="+351 912 345 678" pattern="\+351 9[0-9]{2} \d{3} \d{3}" required>
                         </div>
                         <button type="submit" class="next-button" id="to-review">Próximo: Revisar e Enviar</button>
                     </form>
